test/add-labels/test-labeled-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    environment: prod
  name: test-labeled
  namespace: default
spec: 
  containers:
  - name: ubuntu
    image: ubuntu:latest
    command: ["sleep", "3600"]
