test/add-labels/test-pod-patched.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test
  namespace: default
  labels:
    team: bravo
spec: 
  containers:
  - name: ubuntu
    image: ubuntu:latest
    command: ["sleep", "3600"]
