test/add-labels/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: add-labels
policies:
  - add-labels-clusterpolicy.yaml
resources:
  - test-pod.yaml
  - test-labeled-pod.yaml
  - test-labeled-team-pod.yaml
results:
  - policy: add-labels
    rule: add-team
    resources: 
    - default/test
    kind: Pod
    result: pass
    patchedResources: test-pod-patched.yaml
  - policy: add-labels
    rule: add-team
    resources: 
    - default/test-labeled
    kind: Pod
    result: pass
    patchedResources: test-labeled-pod-patched.yaml
  - policy: add-labels
    rule: add-team
    resources: 
    - default/test-labeled-team
    kind: Pod
    result: skip
